# sat-geo-solver

./: LICENSE  README.md  pyproject.toml  requirements.txt
nb_examples/: g16.tle  g19.tle  observe.ipynb  scenarios.ipynb
src/sat_geo_solver/: __init__.py  observe.py  scenarios.py
tests/: g19.tle  test_observe.py
