[build-system]
requires = [
    "hatchling",
    "hatch-requirements-txt"
]
build-backend = "hatchling.build"

[project]
name = "sat-geo-solver"
description = "A satellite geolocation toolkit."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
dynamic = ["version", "dependencies"]

[tool.hatch.version]
path = "src/sat_geo_solver/__version__.py"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]
